homework20240612